<resources>
    <string name="app_name">Playlist Maker</string>

    <string name="title_main">Playlist Maker</string>
    <string name="search_button">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="settings_button">Настройки</string>

    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>
    <string name="back">Назад</string>

    <string name="search_hint">Поиск</string>
    <string name="clear_search">Очистить поиск</string>
    <string name="track_separator">•</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>

    <string name="share_message">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_chooser_title">Поделиться приложением</string>

    <string name="support_email">support@practicum.yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и команде Практикума!</string>

    <string name="terms_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="player_cover_description">Обложка альбома</string>
    <string name="player_play">Воспроизвести</string>
    <string name="player_playlist">Добавить в плейлист</string>
    <string name="player_favorite">Добавить в избранное</string>
    <string name="player_initial_time">00:00</string>
    <string name="player_pause">Пауза</string>
    <string name="player_preview_unavailable">Отрывок недоступен</string>
    <string name="player_preview_error">Не удалось загрузить отрывок</string>
    <string name="player_duration">Длительность</string>
    <string name="player_album">Альбом</string>
    <string name="player_year">Год</string>
    <string name="player_genre">Жанр</string>
    <string name="player_country">Страна</string>
</resources>
